--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #black;
+  background-color: #5f9bcf;
   display: flex;
   flex-direction: column;
   align-items: center;
